added ghostcontract support

--- a/index.html
+++ b/index.html
@@ -84,18 +84,18 @@
 
         </div>
 
-        <div class="redeemTxtHover noselect">7025 Sockz Left</div>
+        <div class="redeemTxtHover noselect">Sockz Left</div>
 
       </div>
 
-      <div class="checkToad noselect">
+<!--       <div class="checkToad noselect">
         <div class="selltxt" style="top: 13px; font-size: 26px; color: white;">Check Toad</div>
         <div class="connectbck">
           <img src="assets/images/banner/connect.png">
           <img src="assets/images/banner/connectHover.png">
         </div>
 
-      </div>
+      </div> -->
 
       <!-- not connected yet -->
 
@@ -349,7 +349,7 @@
             <div class="sockGifWrap">
               <div class="sockGif">
                 <!-- <img class="mobileSockBgrd" src="assets/images/gif/sock3.gif" alt="funny GIF" width="100%"> -->
-                <img class="mobileSockBgrd" src="assets/images/gif/sock.png" alt="funny GIF" width="100%">
+                <img class="mobileSockBgrd" src="assets/images/gif/ghostz.gif" alt="funny GIF" width="100%">
               </div>
             </div>
 
@@ -399,7 +399,7 @@
 
           <div class="sellredeem">
             <div class="sell">
-              <div class="selltxt" onclick="window.open('https://opensea.io/collection/sockz0', '_blank');">OpenSea</div>
+              <div class="selltxt" onclick="window.open('https://opensea.io/collection/sockz-edition-1-1', '_blank');">OpenSea</div>
               <img id="sellowns" src="assets/images/modal/redeemOwns.png">
             </div>
             <div class="redeeming" onclick="console.log('REDEEM LFG')">
@@ -446,7 +446,7 @@
               <div class="sockGifWrap">
                 <div class="sockGif">
                   <!-- <img class="mobileSockBgrd" src="assets/images/gif/sock3.gif" alt="funny GIF" width="100%"> -->
-                  <img class="mobileSockBgrd" src="assets/images/gif/sock.png" alt="funny GIF" width="100%">
+                  <img class="mobileSockBgrd" src="assets/images/gif/ghostz.gif" alt="funny GIF" width="100%">
                 </div>
               </div>
 
@@ -505,7 +505,7 @@
                   <img src="assets/images/modal/shill.png">
               </div>
               <div class="redeeming">
-                <div class="shillOstxt" onclick="window.open('https://opensea.io/collection/sockz0', '_blank');">OpenSea</div>
+                <div class="shillOstxt" onclick="window.open('https://opensea.io/collection/sockz-edition-1-1', '_blank');">OpenSea</div>
                   <img src="assets/images/modal/opensea.png">
               </div>
             </div>
@@ -561,7 +561,7 @@
                 <div class="infoTitle">How It Works:
                 </div>
                 <div class="infoBody">
-SOCKZ (Edition 0) are claimable by all CrypToadz Holder with a maximum supply of 7025 SOCKZ.
+SOCKZ (Edition 0) are claimable by everyone who participated in the party bid for the Ghost CrypToadz.
                   <br>
 You can transfer, sell, or trade the NFT anytime on a variety of platforms. To receive a pair shipped to your front door, you have to redeem it.
                 </div>
