--- a/index.html
+++ b/index.html
@@ -360,10 +360,10 @@
               <div id="incrementCount" class="countDownTxt noselect" style="text-align: center;font-size:24px;color:#aaa9a7;">0/7025</div>
             </div>
 
-            <div class="currentPrice">
+            <!-- <div class="currentPrice">
               <div class="currentPriceTxt dH2 noselect">Current Price</div>
               <div class="priceTxt noselect">0.00 ETH</div>
-            </div>
+            </div> -->
 
             <div class="editInfoWrap">
 
@@ -392,7 +392,7 @@
               </a>
             </div>
             <div class="redeeming">
-              <div class="selltxt" style="top: 12px; font-size: 24px;">Redeem(soon)</div>
+              <div class="selltxt" style="top: 12px; font-size: 22px;padding-top: 5px;">Redeem(soon)</div>
               <img src="assets/images/modal/sellredeem.svg">
             </div>
           </div>
@@ -403,7 +403,7 @@
               <img id="sellowns" src="assets/images/modal/redeemOwns.png">
             </div>
             <div class="redeeming" onclick="console.log('REDEEM LFG')">
-              <div class="selltxt" style="font-size: 24px;padding-top: 7px;">Redeem(soon)</div>
+              <div class="selltxt" style="font-size: 22px;padding-top: 5px;">Redeem(soon)</div>
               <img id="redeemowns" src="assets/images/modal/redeemOwns.png" >
             </div>
           </div>
@@ -452,24 +452,16 @@
 
             </div>
 
-            <div class="buycurrentPrice">
+            <!-- <div class="buycurrentPrice">
               <div class="dH2 noselect" style="font-size:15px; text-align: center;color:#aaa9a7;letter-spacing: 1px;">Current Price</div>
               <div class="priceTxt dH1 noselect">0.00 ETH</div>
-            </div>
+            </div> -->
 
             <div class="incrementWrap">
 
               <!-- <img src="assets/images/modal/sockzcount.png"> -->
 
-              <div class="incrementTxt noselect">
-
-                <div class="minus">-</div>
-                <div class="incrementValue">1</div>
-                <div class="plus">+</div>
-
-              </div>
-
-              <div id="incrementCount2" class="incrementCount">0/7025 Minted</div>
+              <!-- <div id="incrementCount2" class="incrementCount">0/7025 Minted</div> -->
 
             </div>
 
