--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
 
             <div class="sockCountDown">
               <div class="tickerTxt noselect">($SOCKZ)</div>
-              <div id="incrementCount" class="countDownTxt noselect" style="text-align: center;font-size:24px;color:#aaa9a7;">0/7025</div>
+              <!-- <div id="incrementCount" class="countDownTxt noselect" style="text-align: center;font-size:24px;color:#aaa9a7;">0/7025</div> -->
             </div>
 
             <!-- <div class="currentPrice">
